log

Thu 14 Mar 2024 08:25:49 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
2b15fdf
Thu 14 Mar 2024 08:26:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
cb4aeec
Thu 14 Mar 2024 08:28:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:25:10: error: ‘elementoMayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   25 |   return elementoMayor;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4b0ff06
Thu 14 Mar 2024 08:32:21 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c:26:2: error: expected ‘;’ before ‘void’
   26 | s
      |  ^
      |  ;
......
   34 | void reverseArray(int arr[], int size) {}
      | ~~~~
Compilation failed
df90eda
Thu 14 Mar 2024 08:33:59 PM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  0|6
total_score: 10/70
8d4d1f8
Thu 14 Mar 2024 08:39:02 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fb7dab5
Thu 14 Mar 2024 08:47:10 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: ‘i’ undeclared (first use in this function)
   48 |   for(i = 0; i < size; i++){
      |       ^
exercises.c:48:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a463f6c
Thu 14 Mar 2024 08:48:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: ‘i’ undeclared (first use in this function)
   48 |   for(i = 0; i < size; i++){
      |       ^
exercises.c:48:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2688c5d
Thu 14 Mar 2024 08:49:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
b7980d6
Thu 14 Mar 2024 08:50:01 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 20/70
6296f2f
Thu 14 Mar 2024 08:54:19 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
ca4721b
Thu 14 Mar 2024 08:56:20 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |   return *newArr;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
004ab93
Thu 14 Mar 2024 09:00:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |   return *newArr;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c3cbd78
